# Axiom

./: .gitignore  .workspace-status  APPROVE.md  ApplicationProtocols  AxiomExampleApp.swift  AxiomFramework-dev  CHECKPOINT.md  CLAUDE.md  DEVELOP.md  FrameworkProtocols  INTEGRATE.md  INTEGRATE_PHASE_3_VALIDATION_RESULTS.md  PLAN.md  PROMPT.md  PROPOSE.md  Package.swift  README.md  REFACTOR.md  ROADMAP.md  RUNNABLE_APP_GUIDE.md  STATUS.md  WORKSPACE.md  run-checkpoint.sh  setup_xcode_project.sh
axiom-application-development/axiom-applications-observability/axiom-applications-observability-mcp/: Cargo.toml
axiom-application-development/axiom-applications-observability/axiom-applications-observability-mcp/benches/: code_generation_benchmarks.rs  performance_benchmarks.rs
axiom-application-development/axiom-applications-observability/axiom-applications-observability-mcp/src/: advanced_visual_intelligence.rs  axiom_framework_integration.rs  code_generation.rs  complete_development_loop.rs  development_workflow.rs  error.rs  hot_reload.rs  intelligence.rs  lib.rs  mcp.rs  performance_analysis_integration.rs  screenshot_matrix_engine.rs  simulator.rs  tools.rs  types.rs
axiom-application-development/axiom-applications-observability/axiom-applications-observability-mcp/templates/: client.swift.template  context.swift.template  presentation.swift.template
axiom-application-development/axiom-applications-observability/axiom-applications-observability-mcp/tests/: basic_mcp_tests.rs  integration_tests.rs  mcp_tools_tests.rs  test_config.rs
axiom-infrastructure-development/axiom-aspire-deployer/: AXIOM_ASPIRE_DEPLOYER_PLAN.md  Cargo.toml  README.md  config.toml
axiom-infrastructure-development/axiom-aspire-deployer/benches/: mcp_performance.rs
axiom-infrastructure-development/axiom-aspire-deployer/src/: lib.rs  main.rs
axiom-infrastructure-development/axiom-aspire-deployer/src/clients/: aspire.rs  grpc.rs  http.rs  mod.rs
axiom-infrastructure-development/axiom-aspire-deployer/src/config/: settings.rs
axiom-infrastructure-development/axiom-aspire-deployer/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs
axiom-infrastructure-development/axiom-aspire-deployer/src/services/: discovery.rs  health.rs  mod.rs  network.rs  orchestrator.rs
axiom-infrastructure-development/axiom-aspire-deployer/tests/: unit_tests.rs
axiom-infrastructure-development/axiom-aspire-deployer/tests/unit/: config_test.rs  health_monitor_test.rs  mcp_protocol_test.rs  network_manager_test.rs  service_discovery_test.rs
axiom-infrastructure-development/axiom-client-generator/: AXIOM_CLIENT_GENERATOR_PLAN.md  COMPREHENSIVE_TESTING_PLAN.md  Cargo.toml  README.md
axiom-infrastructure-development/axiom-client-generator/examples/: README.md
axiom-infrastructure-development/axiom-client-generator/examples/task_manager/: README.md
axiom-infrastructure-development/axiom-client-generator/examples/task_manager/proto/: task_service.proto
axiom-infrastructure-development/axiom-client-generator/examples/user_service/: README.md
axiom-infrastructure-development/axiom-client-generator/examples/user_service/proto/: user_service.proto
axiom-infrastructure-development/axiom-client-generator/proto/: axiom_options.proto
axiom-infrastructure-development/axiom-client-generator/proto/examples/: task_service.proto
axiom-infrastructure-development/axiom-client-generator/src/: error.rs  lib.rs  main.rs
axiom-infrastructure-development/axiom-client-generator/src/generators/: mod.rs  registry.rs
axiom-infrastructure-development/axiom-client-generator/src/generators/swift/: clients.rs  contracts.rs  documentation.rs  mod.rs  naming.rs  templates.rs  types.rs
axiom-infrastructure-development/axiom-client-generator/src/mcp/: handlers.rs  mod.rs  protocol.rs  realtime_validator.rs  server.rs
axiom-infrastructure-development/axiom-client-generator/src/proto/: analyzer.rs  metadata.rs  mod.rs  parser.rs  types.rs
axiom-infrastructure-development/axiom-client-generator/src/templates/swift/clients/: test_file.swift.tera  (+4 more)
axiom-infrastructure-development/axiom-client-generator/src/testing/: mod.rs  runner.rs  swift.rs
axiom-infrastructure-development/axiom-client-generator/src/utils/: config.rs  file_manager.rs  mod.rs  naming.rs  validation.rs
axiom-infrastructure-development/axiom-client-generator/src/validation/: mod.rs  swift.rs
axiom-infrastructure-development/axiom-client-generator/tests/: compilation.rs  fixtures.rs  helpers.rs  mcp.rs  mod.rs  performance.rs  standalone_file_test.rs  standalone_test.rs
axiom-infrastructure-development/axiom-client-generator/tests/fixtures/config/: test_config.json
axiom-infrastructure-development/axiom-client-generator/tests/fixtures/expected_swift/: TaskAction.swift  TaskClient.swift  TaskState.swift
axiom-infrastructure-development/axiom-client-generator/tests/fixtures/proto/: task_service.proto  user_service.proto
axiom-infrastructure-development/axiom-client-generator/tests/integration/: axiom_framework_integration.rs  mod.rs  phase2_complete.rs  swift_generation.rs
axiom-infrastructure-development/axiom-client-generator/tests/unit/: config_management.rs  error_handling.rs  file_management.rs  mod.rs  naming_conventions.rs  proto_parser.rs  swift_generator.rs  template_engine.rs  validation.rs
(+3725 files in other folders)
