[package]
name = "axiom-universal-client-generator"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Team"]
description = "Universal client generator for Axiom frameworks from gRPC proto definitions"
license = "MIT"
repository = "https://github.com/axiom/axiom-universal-client-generator"
keywords = ["grpc", "proto", "codegen", "axiom", "mcp"]
categories = ["development-tools", "template-engine"]

[[bin]]
name = "axiom-universal-client-generator"
path = "src/main.rs"

[dependencies]
# MCP Protocol and Async Runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Proto Parsing and gRPC
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = ["prost"] }
tonic-build = "0.10"

# Command Line Interface
clap = { version = "4.4", features = ["derive", "env"] }

# Code Generation and Templates
tera = { version = "1.19", default-features = false }
handlebars = "4.5"
regex = "1.10"
unicode-normalization = "0.1"
heck = "0.4"

# File System Operations
walkdir = "2.4"
fs_extra = "1.3"
tempfile = "3.8"
ignore = "0.4"

# Configuration and Validation
config = "0.13"
validator = { version = "0.16", features = ["derive"] }
toml = "0.8"
yaml-rust = "0.4"

# Logging and Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
miette = { version = "5.0", features = ["fancy"] }

# Parallel Processing
rayon = "1.8"
dashmap = "5.5"

# Async traits
async-trait = "0.1"

# Additional utilities
glob = "0.3"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dev-dependencies]
# Testing Framework
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.11"
tempfile = "3.0"

# Test Data Management
serde_yaml = "0.9"
insta = "1.34"
pretty_assertions = "1.4"
rstest = "0.18"

# Performance Testing
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["mcp-server", "cli"]
mcp-server = []
cli = []